kubernetes/argocd/argocd-app/stateless/teleport/templates/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-proxy
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`teleport.datrollout.dev`)
      services:
        - name: teleport
          port: 443
  tls:
    passthrough: true
